--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Michael Sprague" />
     <meta name="theme-color" content="#121212" />
     <meta name="apple-mobile-web-app-title" content="desafe.link" />
-    <meta name="application-name" content="" />
+    <meta name="application-name" content="desafe.link" />
     <link rel="preload" as="style" type="text/css" href="./index.scss" />
     <link href="./index.scss" media="screen" rel="stylesheet" />
     <link rel="icon" type="image/png" href="https://emojicon.m5ls5e.workers.dev/🔗" />
