--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,13 @@
   <body>
     <div id="root"></div>
     <script type="module" src="./index.jsx"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5DYGNNLMEL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5DYGNNLMEL');
+    </script>
   </body>
 </html>
